<resources>

    <string name="app_name">android开发权威指南</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="buttonone">按钮1</string>
	<string name="buttontwo">按钮2</string>
	<string name="buttonthree">按钮3</string>
	<string name="buttonfour">按钮4</string>
	<string name="buttonfive">按钮5</string>
	<string name="checked">chekced</string>
	<string name="radio">radio</string>
	<string name="multiple">multiple</string>
	<string name="show">显示</string>
	<string name="addmenu">增加菜单</string>
	<string name="home">首页</string>
	<string name="my">我的</string>
	<string name="more">更多</string>
	<string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="fadeinout">淡入淡出</string>
	<string name="hyperspace">hyperspace</string>
	<string name="ok">确定</string>
	<string name="description">动态壁纸配置</string>
	
</resources>