<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <Button 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:drawableTop="@drawable/star"
    		android:drawableBottom="@drawable/star"
    		android:text="@string/buttonone"/>

	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="119dp"
	        android:drawableBottom="@drawable/star"
	        android:drawablePadding="30dp"
	        android:text="@string/buttontwo" />
		<Button 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:drawableRight="@drawable/star"
    		android:text="@string/buttonthree"/>
		<Button 
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:drawableLeft="@drawable/star"
    		android:drawablePadding="30dp"
    		android:text="@string/buttonfour"/>
	</LinearLayout>
	<Button 
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:id="@+id/activity_button_bt_five"/>
	<ToggleButton 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:checked="true"/>
	<AnalogClock 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<DigitalClock 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
</LinearLayout>