<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="bottom" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/button_normal"
    	android:gravity="center_horizontal"
    	android:orientation="vertical"
    	android:layout_weight="1">
        
        <ImageView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:src="@drawable/home"/>
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/home"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/button_normal_translucent"
    	android:gravity="center"
    	android:orientation="horizontal"
    	android:layout_weight="1">
        
        <ImageView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:src="@drawable/mine"/>
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/my"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/button_normal_translucent"
    	android:gravity="center"
    	android:orientation="vertical"
    	android:layout_weight="1">
        
        <ImageView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:src="@drawable/more"/>
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/more"/>
    </LinearLayout>
    
</LinearLayout>